ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ad628c4650fbf4eae8e2f883249dca1c-2084713246.us-west-2.elb.amazonaws.com
      http:
        paths:
          - path: /api/v1/say-hello
            pathType: Prefix
            backend:
              service:
                name: micro-service-101
                namespace: micro-service-101
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: entity-service
                namespace: entity
                port:
                  number: 80
